# learn-gpt2

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/specs/: from_pretrained.md  learning-path-problems.md
notebooks/: gpt2-demo.ipynb  gpt2-playground.ipynb  inspect-gpt2.ipynb
problems/01-embeddings/: README.md  notebook.ipynb  problem.py  solution.py  test_embeddings.py
problems/02-attention-basics/: README.md  notebook.ipynb  problem.py  solution.py  test_attention.py
problems/03-scaled-attention/: README.md  notebook.ipynb  problem.py  solution.py  test_scaled_attention.py
problems/04-multi-head-attention/: README.md  notebook.ipynb  problem.py  solution.py  test_multi_head_attention.py
problems/05-causal-masking/: README.md  notebook.ipynb  problem.py  solution.py  test_causal_masking.py
problems/06-feedforward-network/: README.md  notebook.ipynb  problem.py  solution.py  test_feedforward.py
problems/07-layer-norm-residuals/: README.md  notebook.ipynb  problem.py  solution.py  test_layer_norm.py
problems/08-transformer-block/: README.md  notebook.ipynb  problem.py  solution.py  test_transformer_block.py
problems/09-gpt2-config/: README.md  notebook.ipynb  problem.py  solution.py  test_config.py
problems/10-full-model/: README.md  notebook.ipynb  problem.py  solution.py  test_gpt2.py
problems/11-weight-initialization/: README.md  notebook.ipynb  problem.py  solution.py  test_initialization.py
problems/12-pretrained-loading/: README.md  notebook.ipynb  problem.py  solution.py  test_pretrained.py
src/gpt2/: __init__.py  model.py
tests/: __init__.py  test_from_pretrained.py  test_version.py
