[project]
name = "learn-gpt2"
version = "0.1.0"
description = "A progressive learning path for implementing GPT-2 from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "scipy>=1.9.0",
    "ipykernel>=6.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn_gpt2"]

[tool.pytest.ini_options]
testpaths = ["problems"]
addopts = [
    "-v",
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (educational comments are okay)
]

[tool.ruff.lint.per-file-ignores]
"problems/**/test_*.py" = ["B018", "F841"]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
]
